--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Hola</h1>
-      <h2>Hola desde linux</h2>
+      <h2>Hola desde Windows</h2>
     </header>
   </body>
 </html>
